packages/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-be-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cloud.google.com/load-balancer-type: "External"
    # CORS configuration for Traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-cors-headers@kubernetescrd
spec:
  ingressClassName: platform-traefik
  rules:
    # HTTP API routing
    - host: iit-bbsr-swaraj-user-be.adityahota.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-be-service
                port:
                  number: 3000
